Fix: Change bytes reading API to work with java 8